--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,20 @@
     box-sizing: border-box;
 }
 
+/* Color Theme Variables */
+:root {
+    --primary-color: #437F97; /* Forest green */
+    --secondary-color: #01295F; /* Mint green */
+    --text-color: #ffffff;
+    --background-color: #2b363b;
+}
+
+/* A11Y Contrast */
+body {
+    color: var(--text-color);
+    background-color: var(--background-color);
+}
+
 button {
     border: initial;
     background-color: initial;
@@ -85,7 +99,7 @@ button {
 
 /* STYLES */
 .header {
-    background-image: linear-gradient(to right, #18A0BE, #622DB9);
+    background-image: linear-gradient(to right, var(--primary-color), var(--secondary-color));
     height: 55px;
     display: flex;
 }
@@ -93,8 +107,10 @@ button {
 .logo {
     align-self: center;
     margin-left: 20px;
-    margin-right: 30px;
+    margin-right: 10px;
     animation: fade-in-from-top 0.5s;
+    height: 40px;
+    width: auto;
 }
 
 .dd-toggle {
